# asio_service_discovery

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  annotated.html  classbetabugs_1_1networking_1_1service__announcer-members.html  classbetabugs_1_1networking_1_1service__announcer.html  classbetabugs_1_1networking_1_1service__discoverer-members.html  classbetabugs_1_1networking_1_1service__discoverer.html  classes.html  dir_35371287e0253107d33147aec810d54b.html  dir_83f86263fb9236a44ab43092ca432054.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ed9a290079fbe10f6ffbabe63ea82eaa.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  index.html  install_dependencies.sh  params.json  service__announcer_8hpp_source.html  service__discoverer_8hpp_source.html  std__chrono__time__traits_8hpp_source.html  structbetabugs_1_1networking_1_1detail_1_1std__chrono__time__traits-members.html  structbetabugs_1_1networking_1_1detail_1_1std__chrono__time__traits.html  structbetabugs_1_1networking_1_1service__discoverer_1_1service-members.html  structbetabugs_1_1networking_1_1service__discoverer_1_1service.html
docs/: Doxyfile  footer.html  header.html
include/betabugs/networking/: service_announcer.hpp  service_discoverer.hpp
include/betabugs/networking/detail/: std_chrono_time_traits.hpp
search/: all_0.js  all_3.js  classes_0.js  functions_0.js  search.js  typedefs_0.js  typedefs_1.js  variables_1.js  variables_2.js
stylesheets/: stylesheet.css
tests/: test_all.cpp  test_announcer.cpp  test_basics.cpp  test_limits.cpp
